# semantiva-imaging

./: AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  ci_pipeline.sh  codec_dependencies.md  pyproject.toml
.github/workflows/: ci-pipeline.yaml  version.txt
docs/: data_io_reference.md  data_types_mpl.rst
examples/: README.md  gaussian_beam_figure_animation.yaml  hyperspectral_example.py  image_io_roundtrip.py  param_sweep_pipeline.yaml  parametric_surface_wave.yaml  run_space_plot_pipeline.yaml  wave_animation.yaml
scripts/: __init__.py  add_license.py  check_license_headers.py
semantiva_imaging/: README.md  __init__.py
semantiva_imaging/adapters/: __init__.py  factory.py  opencv_factory.py
semantiva_imaging/adapters/opencv_library/: __init__.py  builders.py  filters.py  morphology.py  transforms.py
semantiva_imaging/data_io/: __init__.py  io.py  loaders_savers.py  parametric_base.py  parametric_line.py  parametric_plotter.py  parametric_surface.py  url_loader.py
semantiva_imaging/data_types/: __init__.py  data_types.py  mpl_figure.py
semantiva_imaging/probes/: __init__.py  probes.py
semantiva_imaging/processing/: __init__.py  base_nchannel.py  figure_render.py  operations.py  processors.py
semantiva_imaging/visualization/: viewers.py
tests/: conftest.py  pipeline_config.yaml  pipeline_parametric_gaussian_fit.yaml  test_base_nchannel.py  test_expression_env_kwarg_security.py  test_expression_env_safe_eval.py  test_figure_render_ops.py  test_hyperspectral_example.py  test_image_algorithm.py  test_image_feature_extraction_and_fit_workflows_in_pipelines.py  test_image_interactive_viewer.py  test_image_io.py  test_image_pipeline.py  test_image_pipeline_and_task.py  test_image_pipeline_slicing.py  test_image_pipeline_yaml.py  test_image_probe.py  test_image_stack_animator.py  test_image_viewer.py  test_mpl_figure_datatype.py  test_nchannel_processor_factory.py  test_nchannel_types.py  test_opencv_factory.py  test_parametric_line_surface.py  test_parametric_plotter.py  test_parametric_plotter_safe_eval.py  test_parametric_surface_override.py  test_pipeline_parametric_gaussian_fit_yaml.py  test_readme_code.py  test_rgb_rgba_as_nchannel.py  test_single_channel_mpl_render.py  test_singlechannel_image_types.py  test_url_loader.py
tests/data_io/: test_image_and_video_io.py
tests/opencv_library/: test_BilateralFilterRGBImageProcessor.py  test_CannyEdgeGrayscaleImageProcessor.py  test_DilateBinaryImageProcessor.py  test_ErodeBinaryImageProcessor.py  test_FlipRGBImageProcessor.py  test_GaussianBlurRGBImageProcessor.py  test_LaplacianGrayscaleImageProcessor.py  test_MedianBlurRGBImageProcessor.py  test_ResizeRGBImageProcessor.py  test_RotateRGBImageProcessor.py  test_SobelEdgeGrayscaleImageProcessor.py  test_integration_pipeline.py
