[project]
name = "semantiva-imaging"
dynamic = ["version"]
description = "Image extension of Semantiva framework."
license = "Apache-2.0"
readme = "README.md" 
requires-python = ">=3.10.12"
dependencies = [
    "numpy>=1.23.0",
    "semantiva>=0.5.0",
    "pillow>=9.2.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "ipywidgets>=8.0.0",
    "opencv-python>=4.8.0",
]
distribution = true


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black >=24.10.0",
    "mypy >=1.14.1",
    "pylint >=3.3.3",
    "pytest >=8.3.4",
    "ruff >=0.1.13",
    "coverage",
    "types-PyYAML>=6.0.12",
]

[tool.pdm.version]
source = "file"
path = ".github/workflows/version.txt"


[project.entry-points.'semantiva.extensions']
semantiva-imaging = "semantiva_imaging:ImagingExtension"


[tool.black]
# Configuration for the black code formatter


[tool.pylint]
# Configuration for pylint (static analysis)
max-line-length = 120  
fail-under = 7.5

[tool.mypy]
exclude = [
    "docs/", 
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["semantiva_imaging"]


[tool.pdm.scripts]
cicheck = "bash ./ci_pipeline.sh"  # Define the shell script as a PDM script

